Added line-of-sight splitting at sub-tiles boundaries.